--- a/magis-tv.app/comprar/index.html
+++ b/magis-tv.app/comprar/index.html
@@ -3515,7 +3515,7 @@
                                       <div class="">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa-solid fa-chevron-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
