--- a/magis-tv.app/comprar/index.html
+++ b/magis-tv.app/comprar/index.html
@@ -3515,13 +3515,12 @@
                                       <div class="">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
                                         ></i>
                                       </div>
                                     </div>
@@ -3574,13 +3573,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
@@ -3595,17 +3594,19 @@
                                   <div
                                     class="elementskit-card-body ekit-accordion--content"
                                   >
-                                    <p>
-                                      Actualmente solo se puede instalar la
-                                      aplicación en todos los dispositivos con
-                                      sistema operativo Android, por ejemplo:
-                                    </p>
-                                    <p>
-                                      Celulares, tablet, fire tv stick, smart tv
-                                      con Android, tv box, chromecast de 4ta
-                                      generación, emuladores Android para pc
-                                      windows o macOS.
-                                    </p>
+                                  <p>
+                                    En la actualidad, la aplicación solo es compatible con dispositivos que tienen sistema operativo Android. Algunos ejemplos incluyen:
+                                  </p>
+                                  <ul style="padding-left: 10%;">
+                                    <li> Celulares</li>
+                                    <li> Tablets</li>
+                                    <li> Fire TV Stick</li>
+                                    <li> Smart TVs con Android</li>
+                                    <li> TV Box</li>
+                                    <li> Chromecast de 4ta generación</li>
+                                    <li> Emuladores Android para PC (Windows o macOS)</li>
+                                  </ul>
+                                  
                                   </div>
                                 </div>
                               </div>
@@ -3630,13 +3631,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
@@ -3683,13 +3684,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
@@ -3734,13 +3735,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
@@ -3784,13 +3785,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
@@ -3835,13 +3836,13 @@
                                       <div class="ekit_accordion_normal_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-open icon-right icon icon-down-arrow1"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                       <div class="ekit_accordion_active_icon">
                                         <i
                                           aria-hidden="true"
-                                          class="icon-closed icon-right icon icon-up-arrow"
+                                          class="fa fa-chevron-circle-down"
                                         ></i>
                                       </div>
                                     </div>
