--- a/magis-tv.app/comprar/index.html
+++ b/magis-tv.app/comprar/index.html
@@ -1417,7 +1417,7 @@
                                 >planes más destacados con precios asequibles,
                               </em>
                               y mucho más. Al
-                              <a href="https://comprarmagistv.app/"
+                              <a
                                 >adquirir Magis TV Oficial</a
                               >, accede a una variedad de canales en vivo,
                               películas, series y una amplia oferta deportiva.
@@ -1566,7 +1566,7 @@
                                           <div class="ekit_double_button">
                                             <a
                                               class="ekit-double-btn ekit-double-btn-one"
-                                              href="https://tv.magistv.app/"
+                                              href="https://www.magis-tv.org/apps/Magis-TV-la-versi%C3%B3n-%C3%BAltima.apk?1130"
                                             >
                                               <i
                                                 aria-hidden="true"
@@ -1618,7 +1618,7 @@
                                           <div class="ekit_double_button">
                                             <a
                                               class="ekit-double-btn ekit-double-btn-one"
-                                              href="https://www.magistv.app/static/mgsmob_v5.10.0.apk"
+                                              href="https://app.magistv.help/app/magismobile_MGSTV-M.apk?11"
                                             >
                                               <i
                                                 class="fa-brands fa-android"
@@ -1632,7 +1632,7 @@
                                             <!-- href="https://magis-tv.app/pc/" -->
                                             <a
                                               class="ekit-double-btn ekit-double-btn-two"
-                                              href="https://tv.magistv.app/"
+                                              href="https://www.magis-tv.org/apps/Magis-TV-la-versi%C3%B3n-%C3%BAltima.apk?1130"
                                             >
                                               <i
                                                 aria-hidden="true"
