--- a/magis-tv.app/comprar/index.html
+++ b/magis-tv.app/comprar/index.html
@@ -1566,7 +1566,7 @@
                                           <div class="ekit_double_button">
                                             <a
                                               class="ekit-double-btn ekit-double-btn-one"
-                                              href="https://www.magis-tv.org/apps/Magis-TV-la-versi%C3%B3n-%C3%BAltima.apk?1130"
+                                              href="https://tv.magistv.app/"
                                             >
                                               <i
                                                 aria-hidden="true"
@@ -1618,7 +1618,7 @@
                                           <div class="ekit_double_button">
                                             <a
                                               class="ekit-double-btn ekit-double-btn-one"
-                                              href="https://app.magistv.help/app/magismobile_MGSTV-M.apk?11"
+                                              href="https://www.magistv.app/static/mgsmob_v5.12.1.apk"
                                             >
                                               <i
                                                 class="fa-brands fa-android"
